[fix]#14502 icon title alignement on domino

--- a/css/applications/exercizer/_exercizer-specifics.scss
+++ b/css/applications/exercizer/_exercizer-specifics.scss
@@ -412,20 +412,12 @@ body.exercizer{
 
                     }
     				.title-icon i{
-    					color: $black;
+    					color: $text-light;
     				}
                 }
 
             }
         }
-
-        i{
-            &:before{
-                font-size: 13px;
-                color: $text-light;
-            }
-        }
-
     }
 
     .flex-row.justify-center.centered > button.flat-button.five{
